--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ deusex-timer-test-*
 *.obj
 *.lst
 
+splits.json*
+
 # Are partial instruction dumps of games legal to share? No clue! Which is why these aren't being comitted.
 dump.txt
 test.txt
